...
class SipllmApp extends StatelessWidget {
  const SipllmApp({super.key});

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      title: 'SipLLM Studio',
      debugShowCheckedModeBanner: false,
      theme: AppTheme.darkTheme,
      home: const _Bootstrap(),
    );
  }
}
...
